--- a/src/app/modules/person/person.component.html
+++ b/src/app/modules/person/person.component.html
@@ -3,7 +3,7 @@
         <mat-icon>add</mat-icon>
     </button> -->
 
-  <mat-card class="example-card">
+  <mat-card>
     <mat-card-header>
       <!-- <div mat-card-avatar class="example-header-image"></div> -->
       <i class="material-icons">supervised_user_circle</i>
@@ -26,7 +26,7 @@
           </button>
         </mat-form-field>
 
-        <button mat-raised-button (click)="save()" align="end" style="margin-bottom: 15px;">
+        <button mat-raised-button (click)="save()" align="end" style="margin-bottom: 15px;" color="primary">
           <mat-icon>add</mat-icon> Add new
         </button>
       </div>
