--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,21 +1,21 @@
 <div class="animated fadeIn dashboard">
-  <mat-card class="dashboard-item item-teal float-item" routerLink="/person">
+  <mat-card class="dashboard-item item-teal float-item" routerLink="/clients">
     <i class="material-icons dashboard-icon">person</i>
     <mat-card-header>
       <mat-card-title>
-        <h1>Personas</h1>
+        <h1>Clients</h1>
       </mat-card-title>
-      <mat-card-subtitle># personas</mat-card-subtitle>
+      <mat-card-subtitle># clients</mat-card-subtitle>
     </mat-card-header>
   </mat-card>
 
-  <mat-card class="dashboard-item item-brown float-item">
+  <mat-card class="dashboard-item item-brown float-item" routerLink="/users">
     <i class="material-icons dashboard-icon">verified_user</i>
     <mat-card-header>
       <mat-card-title>
-        <h1>Usuarios</h1>
+        <h1>Users</h1>
       </mat-card-title>
-      <mat-card-subtitle># usuarios</mat-card-subtitle>
+      <mat-card-subtitle># users</mat-card-subtitle>
     </mat-card-header>
   </mat-card>
 </div>
