--- a/src/app/components/confirm/confirm.component.html
+++ b/src/app/components/confirm/confirm.component.html
@@ -1,13 +1,8 @@
-<!-- EL TITULO Y EL MENSAJE SON SETEADOS DESDE OTRO COMPONENTE -->
 <h1 mat-dialog-title>{{data.title}}</h1>
-<mat-dialog-content>
-    {{data.message}}
-</mat-dialog-content>
-
-<br />
-<!-- EL LOS BOTONES DEVUELVEN UN TRUE O FALSE AL COMPONENTE QUE ENVIA LA DATA,
-EL COMPONENTE QUE ENVIA LA DATA SE SUSCRIBE A LA RESPUESTA BOOLEANA DEL CONFIRM. -->
-<mat-dialog-actions align="end">
-    <button mat-button [mat-dialog-close]>Cancel</button>
-    <button mat-button [mat-dialog-close]="true">Ok</button>
-</mat-dialog-actions>
+<div mat-dialog-content>
+  <p>{{data.message}}</p>
+</div>
+<div mat-dialog-actions align="end">
+  <button mat-button [mat-dialog-close]>No Thanks</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Ok</button>
+</div>
