--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,8 @@ html {
 }
 
 body {
-  margin          : 0 !important;
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
   height: 100%;
   background-color: rgb(235, 235, 235);
 }
