--- a/src/app/modules/login-layout/login/login.component.html
+++ b/src/app/modules/login-layout/login/login.component.html
@@ -1,30 +1,30 @@
 <div class="signin-content animated fadeIn">
-    <mat-card>
-        <mat-card-content>
-            <img src="assets/img/1.png" width="200px" onmousedown="return false;">
-            <form [formGroup]="form" (ngSubmit)="onSubmit()">
-                <mat-form-field class="full-width-input">
-                    <input matInput placeholder="User" formControlName="user_name" required>
-                    <mat-error *ngIf="isFieldInvalid('user_name')">
-                        Please enter a valid username or email
-                    </mat-error>
-                </mat-form-field>
+  <mat-card>
+    <mat-card-content>
+      <img src="assets/img/1.png" width="200px" onmousedown="return false;">
+      <form [formGroup]="form" (ngSubmit)="login()">
+        <mat-form-field class="full-width-input">
+          <input matInput type="text" placeholder="User" formControlName="user_name" required>
+          <mat-error *ngIf="isFieldInvalid('user_name')">
+            Please enter a valid username or email
+          </mat-error>
+        </mat-form-field>
 
-                <mat-form-field class="full-width-input separate">
-                    <input matInput type="password" placeholder="Password" formControlName="password" required>
-                    <mat-error *ngIf="isFieldInvalid('user_name')">
-                        Please enter a valid password
-                    </mat-error>
-                </mat-form-field>
+        <mat-form-field class="full-width-input separate">
+          <input matInput type="password" placeholder="Password" formControlName="password" required>
+          <mat-error *ngIf="isFieldInvalid('password')">
+            Please enter a valid password
+          </mat-error>
+        </mat-form-field>
 
-                <button mat-raised-button color="primary" type="submit" style="width: 100%;" [disabled]="isLogin">
-                    <div *ngIf="isLogin; else loginText">Loading ...</div>
-                </button>
-            </form>
+        <button mat-raised-button color="primary" type="submit" style="width: 100%;" [disabled]="form.invalid || isLogin">
+          <div *ngIf="isLogin; else loginText">Loading ...</div>
+        </button>
+      </form>
 
-            <ng-template #loginText>
-                Login
-            </ng-template>
-        </mat-card-content>
-    </mat-card>
+      <ng-template #loginText>
+        Login
+      </ng-template>
+    </mat-card-content>
+  </mat-card>
 </div>
