Moved app component to root dir

--- a/src/app/components/snackbar/snackbar.component.html
+++ b/src/app/components/snackbar/snackbar.component.html
@@ -1,3 +1,4 @@
 <span class="error-message">
-    {{data.data.message}} <!-- EL DATA VIENE DE OTRO COMPONENTE -->
+  {{data.data.message}}
+  <!-- EL DATA VIENE DE OTRO COMPONENTE -->
 </span>
