--- a/src/app/modules/user/user.component.html
+++ b/src/app/modules/user/user.component.html
@@ -1,3 +1,85 @@
-<p>
-  user works!
-</p>
+<div class="animated fadeIn table-container mat-elevation-z20">
+  <mat-card>
+    <mat-card-header>
+      <i class="material-icons">supervised_user_circle</i>
+      <mat-card-title>Clients</mat-card-title>
+      <mat-card-subtitle>Add, update or delete users</mat-card-subtitle>
+    </mat-card-header>
+
+    <mat-card-content>
+      <div class="table-loading-shade" *ngIf="isLoading">
+        <mat-spinner *ngIf="isLoading"></mat-spinner>
+      </div>
+
+      <div class="table-header">
+        <mat-form-field class="filter-field">
+          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter by name, age or gender"
+            [(ngModel)]="search">
+          <button mat-button *ngIf="search" matSuffix mat-icon-button aria-label="Clear"
+            (click)="search=''; applyFilter('')">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field>
+
+        <!-- Add button -->
+        <button mat-raised-button (click)="save()" style="margin-bottom: 15px;" color="primary">
+          <mat-icon>add</mat-icon> Add user
+        </button>
+      </div>
+
+      <mat-table #table [dataSource]="dataSource" class="person-table" matSort matSortActive="id" matSortDisableClear
+        matSortDirection="desc">
+        <!-- Table content -->
+        <ng-container matColumnDef="id">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>No.</mat-header-cell>
+          <mat-cell *matCellDef="let row; let i = index;"> {{ i + 1 }} </mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="user_name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.user_name }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="email">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Age</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.email }}</mat-cell>
+        </ng-container>
+
+        <ng-container matColumnDef="created_at">
+          <mat-header-cell *matHeaderCellDef>Created at</mat-header-cell>
+          <mat-cell *matCellDef="let row">{{ row.created_at | date:'dd/MM/yyyy' }}</mat-cell>
+        </ng-container>
+
+        <!-- Table actions -->
+        <ng-container matColumnDef="userid">
+          <mat-header-cell *matHeaderCellDef>
+            Actions
+          </mat-header-cell>
+
+          <mat-cell *matCellDef="let row">
+
+            <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Click to see more actions">
+              <i class="material-icons">more_vert</i>
+            </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item (click)="edit(row)">
+                <mat-icon aria-label="Edit">create</mat-icon> Edit
+              </button>
+              <button mat-menu-item (click)="delete(row)">
+                <mat-icon aria-label="Delete">clear</mat-icon> Delete
+              </button>
+            </mat-menu>
+          </mat-cell>
+        </ng-container>
+
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+      </mat-table>
+
+      <!-- Table pagination -->
+      <mat-paginator [pageSizeOptions]="pageSizeOptions" [length]="totalItems" [pageSize]="pageSize"
+        (page)="onPaginateChange($event)">
+      </mat-paginator>
+    </mat-card-content>
+  </mat-card>
+</div>
