--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,32 +36,6 @@ body {
   background-color: rgb(235, 235, 235);
 }
 
-/* @media (prefers-color-scheme: dark) {
-    body {
-        background-color: black;
-    }
-
-    .mat-card {
-        background-color: #201f1f;
-    }
-
-    .mat-form-field-empty.mat-form-field-label {
-        color: #3F51B5;
-    }
-
-    .mat-form-field-underline {
-        background-color: #3F51B5 !important;
-    }
-
-    .mat-form-field-underline .mat-form-field-ripple{
-        background-color: #3F51B5 !important;
-    }
-
-    h1,h2,h3,h4 {
-        color: #3F51B5;
-    }
-} */
-
 /* ANIMACIÓN AL CARGAR UNA PÁGINA */
 .animated {
   -webkit-animation-duration : 1s;
@@ -103,4 +77,73 @@ label {
 /* PONE LOS ICONOS DEL TOOLBAR A LA DERECHA */
 .spacer {
   flex: 1 1 auto !important;
+}
+
+
+/*
+Styles for mat grids
+*/
+
+.table-container {
+  overflow: auto;
+  height  : auto;
+  width   : 80vw;
+  margin  : 5vh auto 9vh auto !important;
+}
+
+.add-button {
+  position     : absolute;
+  top          : 15vh;
+  /*right      :15vw;*/
+  right        : 13vw;
+  color        : #FFF;
+  border-radius: 50px;
+  text-align   : center;
+  box-shadow   : 2px 2px 3px #999;
+  z-index      : 2;
+}
+
+.table-loading-shade {
+  position       : absolute;
+  top            : 0;
+  left           : 0;
+  bottom         : 56px;
+  right          : 0;
+  background     : rgba(0, 0, 0, 0.01);
+  z-index        : 1;
+  display        : flex;
+  align-items    : center;
+  justify-content: center;
+}
+
+
+/* Column Widths */
+.mat-column-number,
+.mat-column-state {
+  max-width: 64px;
+}
+
+.mat-column-created {
+  max-width: 124px;
+}
+
+/* applyFilter */
+.table-header {
+  padding: 0px 8px 0px 24px;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width    : 75vw;
+  height   : 10vh !important;
+}
+
+.table-header {
+  padding-top: 3vh !important;
+}
+
+.button-row,
+.mat-column-personid {
+  display        : flex;
+  justify-content: center;
 }
